#59: Updated pom.xml in springboot folder, still not working, co-author: Thomas